--- a/revalida-shopping-app/src/app/modules/dashboard/pages/checkout/checkout.component.scss
+++ b/revalida-shopping-app/src/app/modules/dashboard/pages/checkout/checkout.component.scss
@@ -47,3 +47,55 @@
     color: #dc3545;
     font-size: 0.875rem;
 }
+
+// Modal Styles
+.modal .modal-dialog {
+    max-width: 600px;
+    max-height: 1000px;
+    height: 100%;
+  }
+  
+  // #deactivateUserModal .modal-dialog,
+  // #deactivateSelectedUserModal .modal-dialog {
+  //   max-width: 400px;
+  // }
+  
+  .modal .modal-header,
+  .modal .modal-body,
+  .modal .modal-footer {
+    padding: 20px 30px;
+  }
+  .modal .modal-content {
+    border-radius: 3px;
+    font-size: 14px;
+  }
+  .modal .modal-footer {
+    background: #ecf0f1;
+    border-radius: 0 0 3px 3px;
+  }
+  .modal .modal-title {
+    display: inline-block;
+  }
+  .modal .form-control {
+    border-radius: 2px;
+    box-shadow: none;
+    border-color: #dddddd;
+  }
+  .modal textarea.form-control {
+    resize: vertical;
+  }
+  .modal .btn {
+    border-radius: 2px;
+    min-width: 100px;
+  }
+  .modal form label {
+    font-weight: normal;
+  }
+  
+  .modal .order-date, 
+  .modal .customer-loc,
+  .modal .payment-status {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+  }
