--- a/revalida-shopping-app/src/app/modules/dashboard/pages/checkout/checkout.component.scss
+++ b/revalida-shopping-app/src/app/modules/dashboard/pages/checkout/checkout.component.scss
@@ -99,3 +99,10 @@
       justify-content: space-between;
       align-items: flex-start;
   }
+
+  .store{
+    text-align: center;
+    font-size: 14px;
+    color: gray;
+    margin-bottom: -10px;
+}
