Finalized my-purchases ui and functionality

--- a/revalida-shopping-app/src/app/modules/dashboard/pages/my-purchases/my-purchases.component.html
+++ b/revalida-shopping-app/src/app/modules/dashboard/pages/my-purchases/my-purchases.component.html
@@ -1,5 +1,5 @@
 <section>
-    <app-navbar></app-navbar>
+    <app-navbar [itemCountInput]="cartItemCount"></app-navbar>
     <div class="container mt-4 profile-container">
       <div class="row">
         <!-- Side Menu -->
